Actualización: Home por docs

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -114,4 +114,4 @@ a {
 
 
 /* ==== Inicio Cards ==== */
-#titulo { text-align: center; color: #f1f1f1;}
+/* #titulo { text-align: center; color: #f1f1f1;} */
